src/snapshots/floo_bin__test_utils__linux.bash.start_screen.layout_open_popup.snap
---
source: src/test_utils.rs
expression: "format!(\"{buffer:?}\")"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 20 },
    content: [
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                ┌─────────── Create a new Fireplace ───────────┐                ",
        "                │┌ Fireplace Name ────────────────────────────┐│                ",
        "                │││                                           ││                ",
        "                │└────────────────────────────────────────────┘│                ",
        "                │┌ Path to Fireplace ─────────────────────────┐│                ",
        "                ││                                            ││                ",
        "                │└────────────────────────────────────────────┘│                ",
        "                │               Cancel      OK                 │                ",
        "                │                                              │                ",
        "                └──────────────────────────────────────────────┘                ",
        "             Your floo network is dark, no fireplaces are connected.            ",
        "                       To add a destination, press n or %                       ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 5, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 64, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 6, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 6, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 63, y: 6, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 64, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 7, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 7, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 19, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 62, y: 7, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 63, y: 7, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 64, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 8, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 8, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 63, y: 8, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 64, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 9, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 9, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 63, y: 9, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 64, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 10, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 10, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 62, y: 10, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 63, y: 10, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 64, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 11, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 11, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 63, y: 11, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 64, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 12, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 31, y: 12, fg: White, bg: DarkGray, underline: Reset, modifier: NONE,
        x: 39, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 43, y: 12, fg: White, bg: DarkGray, underline: Reset, modifier: NONE,
        x: 47, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 63, y: 12, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 64, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 13, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 63, y: 13, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 64, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 14, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 64, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 13, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 68, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 23, y: 16, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 51, y: 16, fg: LightCyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 52, y: 16, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 56, y: 16, fg: LightCyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 57, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
